# langextract-platform

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  replit.md  tailwind.config.ts
attached_assets/: Pasted--github-ISSUE-TEMPLATE-1-bug-md-2-feature-request-md--1755619996266_1755619996267.txt  Pasted--github-ISSUE-TEMPLATE-1-bug-md-2-feature-request-md--1756135488503_1756135488505.txt  Pasted--github-ISSUE-TEMPLATE-1-bug-md-2-feature-request-md--1756585163252_1756585163253.txt  Pasted-Google-for-Developers-Products-Android-Chrome-ChromeOS-Cloud-Firebase-Flutter-Google-Assistant-Googl-1756584385795_1756584385795.txt  Pasted-ntroduction-LangExtract-is-a-Python-library-that-uses-LLMs-to-extract-structured-information-from-un-1755617904132_1755617904133.txt
client/src/: index.css
client/src/components/: entity-highlight.tsx  extraction-form.tsx  processing-status.tsx  results-panel.tsx  use-cases-header.tsx
client/src/pages/: home.tsx
scripts/: enhanced_langextract_runner.py  langextract_runner.py
server/: routes.ts  storage.ts
server/services/: gemini.ts  langextract.ts
shared/: schema.ts
temp/: config_1755621488611.json
